# learn_pybind

./: .gitignore  CMakeLists.txt  README.md  run.py  setup.py
python/: test_mymod.py
src/: main.cpp
